Update the build.gradle.kts config to use a new fatJar task